--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,10 +18,9 @@
 <div class="container-fluid p-0">
     <header th:insert="blocks/header :: header"></header>
     <div class="container mt-2">
-        <h3>Проект cars, выполняемый в рамках курса Job4j</h3>
-        <ul>
-            <li><a th:href="@{/films}">Автотека</a></li>
-        </ul>
+        <li><a th:href="@{/posts}">All Posts</a></li>
+        <li><a th:href="@{/cars}">Your Cars List</a></li>
+        <li><a th:href="@{/posts/create}">Add new post</a></li>
     </div>
     <footer th:insert="blocks/footer :: footer"></footer>
 </div>
