--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -2,6 +2,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="/">Job4jCars</a>
+            <div class="collapse navbar-collapse">
+                <div class="navbar-nav d-flex flex-row">
+                    <a class="nav-item nav-link active" th:href="@{/posts}">All Posts</a>
+                    <a class="nav-item nav-link active" th:href="@{/cars}">Your Car List</a>
+                </div>
+            </div>
         </div>
     </nav>
 </div>
