--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -7,6 +7,14 @@
                     <a class="nav-item nav-link active" th:href="@{/posts}">All Posts</a>
                     <a class="nav-item nav-link active" th:href="@{/cars}">Your Car List</a>
                 </div>
+                <div class="d-flex" th:if="${user.name == 'Guest'}">
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Register</a>
+                    <a class="nav-link text-secondary" th:href="@{/users/login}">Login</a>
+                </div>
+                <div class="d-flex" th:if="${user.name != 'Guest'}">
+                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.name}"></a>
+                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Logout</a>
+                </div>
             </div>
         </div>
     </nav>
