--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,6 +1,6 @@
 <div th:fragment="footer" xmlns:th="http://www.w3.org/1999/xhtml">
     <p class="pt-3 mt-4 text-muted border-top">
-        Cinema
+        Job4jCars
         <br>
         <a href="https://github.com/Kemochka">Создала Кемаева Кристина</a><br>
         <a href="https://job4j.ru">Job4j</a>
