--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -31,7 +31,7 @@
             </div>
             <div class="mb-3">
                 <label for="formFile"><b>Фото</b></label>
-                <input class="form-control form-control-sm w-100" type="file" id="formFile" name="file" required>
+                <input class="form-control form-control-sm w-100" type="file" id="formFile" name="file">
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label"><b>Описание</b></label>
