--- a/src/main/resources/templates/cars/list.html
+++ b/src/main/resources/templates/cars/list.html
@@ -24,10 +24,10 @@
                     <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th class="col-3 text-center">Название</th>
-                        <th class="col-3 text-center">Модель</th>
-                        <th class="col-3 text-center">Двигатель</th>
-                        <th class="col-3 text-center">Цвет</th>
+                        <th class="col-3 text-center">Name</th>
+                        <th class="col-3 text-center">Model</th>
+                        <th class="col-3 text-center">Engine</th>
+                        <th class="col-3 text-center">Color</th>
                     </tr>
                     </thead>
                     <tbody>
