--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -2,7 +2,7 @@
     <p class="pt-3 mt-4 text-muted border-top">
         Job4jCars
         <br>
-        <a href="https://github.com/Kemochka">Создала Кемаева Кристина</a><br>
+        <a href="https://github.com/Kemochka">Created Kemaeva Kristina</a><br>
         <a href="https://job4j.ru">Job4j</a>
     </p>
 </div>
