--- a/src/main/resources/templates/cars/create.html
+++ b/src/main/resources/templates/cars/create.html
@@ -20,32 +20,32 @@
     <div class="container">
         <form class="mt-3" th:action="@{/cars/create}" method="post" enctype="multipart/form-data">
             <div class="mb-3">
-                <label class="form-label" for="name"><b>Название автомобиля</b></label>
-                <input class="form-control" id="name" name="name" placeholder="Название" required type="text">
+                <label class="form-label" for="name"><b>Name of car</b></label>
+                <input class="form-control" id="name" name="name" placeholder="Name" required type="text">
             </div>
             <div class="mb-3">
-                <label for="brand.id">Модель</label>
+                <label for="brand.id">Model</label>
                 <select class="form-control" id="brand.id" name="brand.id">
                     <option th:each="brand : ${brands}" th:value="${brand.id}" th:text="${brand.name}"></option>
                 </select>
             </div>
             <div class="mb-3">
-                <label for="color.id">Цвет</label>
+                <label for="color.id">Color</label>
                 <select class="form-control" id="color.id" name="color.id">
                     <option th:each="color : ${colors}" th:value="${color.id}" th:text="${color.name}"></option>
                 </select>
             </div>
             <div class="mb-3">
-                <label class="form-label" for="engine.id"><b>Двигатель</b></label>
+                <label class="form-label" for="engine.id"><b>Engine</b></label>
                 <input class="form-control" id="engine.id" name="engine.name" placeholder="Название" required type="text">
             </div>
             <div class="mb-3 row">
                 <div class="col-6"></div>
                 <div class="col-6">
                     <div class="row">
-                        <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/cars}">Отмена</a></div>
+                        <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/cars}">Cancel</a></div>
                         <div class="col-6">
-                            <button class="btn btn-primary w-100" type="submit">Сохранить</button>
+                            <button class="btn btn-primary w-100" type="submit">Save</button>
                         </div>
                     </div>
                 </div>
