--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -20,26 +20,27 @@
     <div class="container">
         <form class="mt-3" th:action="@{/posts/create}" method="post" enctype="multipart/form-data">
             <div class="mb-3">
-                <label class="form-label" for="name"><b>Название автомобиля</b></label>
-                <input class="form-control" id="name" name="name" placeholder="Название" required type="text">
-            </div>
-            <div class="mb-3">
-                <label for="carId"><b>Автомобиль</b></label>
+                <label for="carId"><b>Car</b></label>
                 <select class="form-control" id="carId" name="carId">
                     <option th:each="car : ${cars}" th:value="${car.id}" th:text="${car.name}"></option>
                 </select>
             </div>
             <div class="mb-3">
-                <label for="formFile"><b>Фото</b></label>
+                <label for="formFile"><b>Photo</b></label>
                 <input class="form-control form-control-sm w-100" type="file" id="formFile" name="file">
             </div>
             <div class="mb-3">
-                <label for="description" class="form-label"><b>Описание</b></label>
+                <label for="description" class="form-label"><b>Description</b></label>
                 <textarea class="form-control" id="description" name="description" rows="10"
-                          placeholder="Опишите автомобиль"></textarea>
+                          placeholder="Add a car description"></textarea>
             </div>
             <div class="mb-3">
-                <label for="sold">Сделать пост активным?</label>
+                <label class="form-label" for="price"><b>Price</b></label>
+                <input class="form-control" id="price" name="price" placeholder="price in $"
+                       step="1" min="0" required type="number">
+            </div>
+            <div class="mb-3">
+                <label for="sold">Make the post active?</label>
                 <input type="checkbox" name="sold" id="sold">
             </div>
             <div class="mb-3 row">
