--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -24,9 +24,9 @@
                 <input type="hidden" name="id" th:field="*{id}">
                 <input type="hidden" name="car.id" th:field="*{car.id}">
                 <div class="mb-3">
-                    <label for="description" class="form-label"><b>Описание</b></label>
+                    <label for="description" class="form-label"><b>Description</b></label>
                     <textarea class="form-control" id="description" name="description" th:field="*{description}" rows="5"
-                              placeholder="Описание"></textarea>
+                              placeholder="Description"></textarea>
                 </div>
                 <div th:each="photo: ${photos}">
                     <span class="mt-3">
@@ -36,6 +36,11 @@
                 <div class="mt-3">
                     <label for="formFile"><b>Photo (insert file instead of existed)</b></label>
                     <input class="form-control form-control-sm w-100" type="file" id="formFile" name="file">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="price"><b>Price</b></label>
+                    <input class="form-control" id="price" name="price" placeholder="price in $"
+                           step="1" min="0" th:value="${post.price}" required type="number">
                 </div>
                 <div class="mb-3">
                     <label for="sold">The post is still active?</label>
