--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -53,9 +53,9 @@
                         </div>
                         <div class="col-5">
                             <div class="row">
-                                <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/}">Отмена</a></div>
+                                <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/}">Cancel</a></div>
                                 <div class="col-6">
-                                    <button class="btn btn-primary w-100" type="submit">Войти</button>
+                                    <button class="btn btn-primary w-100" type="submit">Login</button>
                                 </div>
                             </div>
                         </div>
