--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -53,9 +53,9 @@
                         <div class="col-6">
                             <div class="row">
                                 <div class="col-6">
-                                    <a class="btn btn-danger w-100" th:href="@{/}">Отмена</a></div>
+                                    <a class="btn btn-danger w-100" th:href="@{/}">Cancel</a></div>
                                 <div class="col-6">
-                                    <button class="btn btn-primary w-100" type="submit">Сохранить</button>
+                                    <button class="btn btn-primary w-100" type="submit">Save</button>
                                 </div>
                             </div>
                         </div>
