--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -2,19 +2,18 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="/">Job4jCars</a>
+            <div class="navbar-nav d-flex flex-row">
+                <a class="nav-item nav-link active" th:href="@{/posts}">All Posts</a>
+                <a class="nav-item nav-link active" th:href="@{/cars}">Your Car List</a>
+            </div>
             <div class="collapse navbar-collapse">
-                <div class="navbar-nav d-flex flex-row">
-                    <a class="nav-item nav-link active" th:href="@{/posts}">All Posts</a>
-                    <a class="nav-item nav-link active" th:href="@{/cars}">Your Car List</a>
-                </div>
-                <div class="d-flex" th:if="${user.name == 'Guest'}">
+                <div class="d-flex">
                     <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Register</a>
                     <a class="nav-link text-secondary" th:href="@{/users/login}">Login</a>
                 </div>
-                <div class="d-flex" th:if="${user.name != 'Guest'}">
-                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.name}"></a>
-                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Logout</a>
-                </div>
+            </div>
+            <div class="d-flex">
+                <a class="nav-link text-secondary me-3" th:href="@{/users/logout}">Logout</a>
             </div>
         </div>
     </nav>
